@@ -98,10 +98,11 @@ Optional packages include:
    dosfstools
    mtools
    hfsutils
+   hfsprogs
    jfsutils
    ntfsprogs
    reiser4progs
    reiserfsprogs
    xfsprogs
    NOTE:  If the vol_id command is in the search PATH, it will be
-          used to read linux-swap volume labels.
+          used to read linux-swap, hfs, and hfs+ file system volume labels.
